# MakeOpenVDB

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  deps.json  install_deps.py
src/: CMakeLists.txt  binaryplugin.cpp  binaryplugin.h  common.h  main.cpp  vdb_tools.h  vtkplugin.cpp  vtkplugin.h
